[package]
name = "parasync-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
indicatif = "0.17.8"
reqwest = { version = "0.11", features = ["json", "blocking"] }
bytes = "1.5"
